test/src/test/k3s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/kokuwaio/keycloak-angular/backend:0.0.1-SNAPSHOT
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 8090
          env:
            - name: MICRONAUT_SECURITY_TOKEN_JWT_SIGNATURES_JWKS_KEYCLOAK_URL
              value: http://keycloak.127.0.0.1.nip.io:8080/realms/kokuwa/protocol/openid-connect/certs
          startupProbe:
            httpGet:
              path: /endpoints/health
              port: management
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 25
          livenessProbe:
            httpGet:
              path: /endpoints/health
              port: management
            periodSeconds: 60
            failureThreshold: 1
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      enableServiceLinks: false
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 0
